@@ -92,7 +92,7 @@ number of free wins that players come across as a result of snowball starts beco
 - [ ] Upgrade strikes/defend event nerf (upgrade 4 random base cards)
 - [x] Thwack = double nob. fight harder
 - [ ] Bite event change. Healing reduces by 1 every time they are played
-- [ ] Match & keep can't be curse 1st card
+- [x] Match & keep can't be curse 1st card
 - [x] Make spin the wheel event optional to skip
 - [ ] Big Fish: banana heal from 1/3 -> 1/4
 - [x] Remove portal event
