@@ -1,6 +1,7 @@
 10-05-2023 (UCF v0.5.0)
 Events
 - Secret Portal: Removed
+- Match and Keep: First card flipped will not be a curse
 
 10-04-2023 (UCF v0.4.0)
 Watcher
